# vehicles

./: CHANGELOG.md  INITIALIZE_REPO.sh  Makefile  README.md  _distribute.py  pyproject.toml  setup.py
src/package_name/: __init__.py  types.py  utilities.py
src/package_name/entity/: senses.py
src/package_name/froggerbot/: colors.py  froggerbot_main_v0.py
src/package_name/nnets/: __init__.py  adaptive_cascade.py  layers.py  loss_functions.py
src/vehicles/: default.py  types.py
src/vehicles/entity/: entity.py
src/vehicles/froggerbot/: froggerbot.py  froggerbot_main.py
src/vehicles/layers/: background.py
src/vehicles/nnets/: activation_functions.py  fourier_attention.py  fourier_latent_attention.py  optimizers.py  positional_embedding.py
tests/: conftest.py
