[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

dynamic = ["version"]

[project]
name = "vehicles"
authors = [
    { name = "David Graey", email = "graeyband@gmail.com" },
]

description = "Modeling biological behavior using Reinforcement Learning and Braitenberg autonomous vehicles as framework""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "dvc",
    "numpy"
]


[project.optional-dependencies]
gui = ["matplotlib.pyplot"]

classifiers = [
    "Development Status :: Development Pre-Release",
    "Programming Language :: Python >= 3.10",
    "License :: MIT License",
    "Operating System :: OS Independent",
]

keywords = []


[project.urls]
"Repository" = ""
"Changelog" = ""